--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@open-sorcerers/breakpoints",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "publishConfig": {
     "access": "public"
   },
@@ -14,7 +14,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
-    "bodypaint": "0.0.6",
+    "bodypaint": "0.0.7",
     "ramda": "^0.27.1",
     "react": "^16.12.0"
   },
@@ -26,10 +26,14 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-destructuring": "^7.12.1",
     "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
     "@rollup/plugin-babel": "^5.2.2",
     "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-json": "^4.0.2",
     "@rollup/plugin-node-resolve": "^7.1.1",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "babel-jest": "^26.6.3",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "babel-preset-react-app": "^9.1.1",
     "eslint": "^7.16.0",
@@ -37,9 +41,12 @@
     "eslint-config-sorcerers": "^0.0.5",
     "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-react": "^7.21.5",
+    "jest": "^26.6.3",
     "nps": "^5.10.0",
     "prettier": "^2.2.1",
     "prettier-eslint": "11.0.0",
+    "react-dom": "^17.0.1",
+    "react-test-renderer": "^17.0.1",
     "rollup": "^1.31.0",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-progress": "^1.1.1",
