--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@open-sorcerers/breakpoints",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "publishConfig": {
     "access": "public"
   },
-  "description": "breakpoints the open sorcerer way",
+  "description": "breakpoints, the open-sorcerer way",
   "main": "breakpoints.js",
   "module": "breakpoints.mjs",
   "repository": "//github.com/open-sorcerers/open-sorcerers",
