--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,3 @@
 extends:
- - eslint-config-sorcerers
- - react-app
- - react-app/jest
-rules:
- arrow-parens:
- - error
- - as-needed
+  - sorcerers
+  - react-app
