--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@open-sorcerers/breakpoints",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "publishConfig": {
     "access": "public"
   },
@@ -38,9 +38,14 @@
     "babel-preset-react-app": "^9.1.1",
     "eslint": "^7.16.0",
     "eslint-config-prettier": "^7.1.0",
+    "eslint-config-react-app": "^6.0.0",
     "eslint-config-sorcerers": "^0.0.5",
+    "eslint-plugin-flowtype": "^5.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.3",
     "nps": "^5.10.0",
     "prettier": "^2.2.1",
