--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@open-sorcerers/breakpoints",
-  "version": "0.0.9",
+  "version": "0.1.0",
   "publishConfig": {
     "access": "public"
   },
@@ -14,11 +14,11 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "@emotion/core": "^10.0.27",
-    "@emotion/styled": "^10.0.27",
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
     "bodypaint": "^0.0.9",
     "ramda": "^0.27.1",
-    "react": "^16.12.0"
+    "react": "^17.0.2"
   },
   "devDependencies": {
     "@babel/core": "7",
@@ -35,6 +35,7 @@
     "@rollup/plugin-node-resolve": "^7.1.1",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "babel-preset-react-app": "^9.1.1",
